--- a/Erp8/AkbilYonetimi/AkbilYonetimiUI/App.config
+++ b/Erp8/AkbilYonetimi/AkbilYonetimiUI/App.config
@@ -16,6 +16,9 @@
             <setting name="KullaniciSifre" serializeAs="String">
                 <value />
             </setting>
+            <setting name="KullaniciId" serializeAs="String">
+                <value>0</value>
+            </setting>
         </AkbilYonetimiUI.Properties.Settings1>
     </userSettings>
 </configuration>
