--- a/Erp8/AkbilYntm/AkbilYonetimiUI/AkbilYonetimiUI.csproj
+++ b/Erp8/AkbilYntm/AkbilYonetimiUI/AkbilYonetimiUI.csproj
@@ -13,15 +13,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AkbilYntmIsKatmani\AkbilYntmIsKatmani.csproj" />
+    <ProjectReference Include="..\AkbilYntmVeriKatmani\AkbilYntmVeriKatmani.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Update="Properties\Settings1.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings1.settings</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -30,13 +30,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Properties\Settings1.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings1.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
 
 </Project>
