--- a/Erp8/PhoneBook/PhoneBookUI/appsettings.json
+++ b/Erp8/PhoneBook/PhoneBookUI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Local": "Data Source=DESKTOP-P4SDEGD;Initial Catalog=PhoneDB;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "Home": "",
+    "Live": ""
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
