--- a/Erp8/PhoneBook/PhoneBookUI/PhoneBookUI.csproj
+++ b/Erp8/PhoneBook/PhoneBookUI/PhoneBookUI.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PhoneBookDataLayer\PhoneBookDataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
