--- a/Erp8/PhoneBook/PhoneBookUI/appsettings.json
+++ b/Erp8/PhoneBook/PhoneBookUI/appsettings.json
@@ -13,4 +13,11 @@
     }
   },
   "AllowedHosts": "*"
+
+  "EmailOptions": {
+    "SenderMail": "",
+    "Password": "",
+    "Smtp": "smtp-mail.outlook.com", //smtp-gmail.com gmaile destek kalktı
+    "SmtpPort": "587", //25
+  }
 }
