--- a/Erp8/PhoneBook/PhoneBookUI/appsettings.json
+++ b/Erp8/PhoneBook/PhoneBookUI/appsettings.json
@@ -12,12 +12,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 
   "EmailOptions": {
-    "SenderMail": "",
-    "Password": "",
+    "SenderMail": "erp8yazilim503@outlook.com",
+    "Password": "wissen_2023@503",
     "Smtp": "smtp-mail.outlook.com", //smtp-gmail.com gmaile destek kalktı
-    "SmtpPort": "587", //25
-  }
+    "SmtpPort": "587" //25
+  },
+  "ProjectManagersEmails": "gamzeturap1@gmail.com"
 }
