--- a/Erp8/PhoneBook/PhoneBookUI/appsettings.json
+++ b/Erp8/PhoneBook/PhoneBookUI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "Local": "Data Source=DESKTOP-P4SDEGD;Initial Catalog=PhoneDB;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "Home": "",
+    "Home": "Data Source=EV;Initial Catalog=PhoneDB;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
     "Live": ""
   },
 
