--- a/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookEntityLayer/PhoneBookEntityLayer.csproj
+++ b/Erp8/PhoneBookNew/PhoneBook/PhoneBook/PhoneBookEntityLayer/PhoneBookEntityLayer.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="5.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
       <PrivateAssets>all</PrivateAssets>
